{
  "version": 4,
  "terraform_version": "1.1.2",
  "serial": 185,
  "lineage": "a9907d41-ffb9-b437-4be9-8c69b2ad4431",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_new_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fe23c115c3ba9bac",
            "arn": "arn:aws:ec2:us-east-2:174228772591:instance/i-0ee2683f6b631c54f",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ee2683f6b631c54f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-07dc0b0cde29b3786",
            "private_dns": "ip-10-230-0-7.us-east-2.compute.internal",
            "private_ip": "10.230.0.7",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0cca89a90110063d2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02b337b63b844b976",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d635428d2e03b905"
            ]
          },
          "dependencies": [
            "aws_security_group.my_public_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.c2m_vpc",
            "data.aws_ami.amz_linux2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:174228772591:internet-gateway/igw-05b44a7237804d896",
            "id": "igw-05b44a7237804d896",
            "owner_id": "174228772591",
            "tags": {
              "Name": "my-igw-c2m"
            },
            "tags_all": {
              "Name": "my-igw-c2m"
            },
            "vpc_id": "vpc-00a1af55f0a8a27ac"
          },
          "dependencies": [
            "aws_vpc.c2m_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:174228772591:route-table/rtb-0b60b807b81f06565",
            "id": "rtb-0b60b807b81f06565",
            "owner_id": "174228772591",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "my_private_rt"
            },
            "tags_all": {
              "Name": "my_private_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-00a1af55f0a8a27ac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.c2m_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:174228772591:route-table/rtb-093ee0f4762cfb3e6",
            "id": "rtb-093ee0f4762cfb3e6",
            "owner_id": "174228772591",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05b44a7237804d896",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my_public_rt"
            },
            "tags_all": {
              "Name": "my_public_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-00a1af55f0a8a27ac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.my_igw",
            "aws_vpc.c2m_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0313846c29b972308",
            "route_table_id": "rtb-0b60b807b81f06565",
            "subnet_id": "subnet-084e69717707c8fb4"
          },
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_subnet.private_subnet",
            "aws_vpc.c2m_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0792d29c5f0f007fa",
            "route_table_id": "rtb-0b60b807b81f06565",
            "subnet_id": "subnet-0630cd61bf377cea9"
          },
          "dependencies": [
            "aws_subnet.private_subnet",
            "aws_vpc.c2m_vpc",
            "aws_route_table.private_rt"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02f4b71a42740fe17",
            "route_table_id": "rtb-093ee0f4762cfb3e6",
            "subnet_id": "subnet-02b337b63b844b976"
          },
          "dependencies": [
            "aws_internet_gateway.my_igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.c2m_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ec57195837f61755",
            "route_table_id": "rtb-093ee0f4762cfb3e6",
            "subnet_id": "subnet-080a67c18a9ee2a0b"
          },
          "dependencies": [
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.c2m_vpc",
            "aws_internet_gateway.my_igw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_public_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:174228772591:security-group/sg-0d635428d2e03b905",
            "description": "All all http traffic ingress and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "The allow all traffic on all port",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d635428d2e03b905",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.230.0.0/25"
                ],
                "description": "The allow http traffic on port 80",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "my-public-sg1",
            "name_prefix": "",
            "owner_id": "174228772591",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "My-http-public-sg"
            },
            "tags_all": {
              "Name": "My-http-public-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-00a1af55f0a8a27ac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.c2m_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:174228772591:subnet/subnet-084e69717707c8fb4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.230.0.16/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-084e69717707c8fb4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "174228772591",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnets"
            },
            "tags_all": {
              "Name": "private-subnets"
            },
            "vpc_id": "vpc-00a1af55f0a8a27ac"
          },
          "dependencies": [
            "aws_vpc.c2m_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:174228772591:subnet/subnet-0630cd61bf377cea9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.230.0.48/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0630cd61bf377cea9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "174228772591",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnets"
            },
            "tags_all": {
              "Name": "private-subnets"
            },
            "vpc_id": "vpc-00a1af55f0a8a27ac"
          },
          "dependencies": [
            "aws_vpc.c2m_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:174228772591:subnet/subnet-02b337b63b844b976",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.230.0.0/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02b337b63b844b976",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "174228772591",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnets"
            },
            "tags_all": {
              "Name": "public-subnets"
            },
            "vpc_id": "vpc-00a1af55f0a8a27ac"
          },
          "dependencies": [
            "aws_vpc.c2m_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:174228772591:subnet/subnet-080a67c18a9ee2a0b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.230.0.32/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-080a67c18a9ee2a0b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "174228772591",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnets"
            },
            "tags_all": {
              "Name": "public-subnets"
            },
            "vpc_id": "vpc-00a1af55f0a8a27ac"
          },
          "dependencies": [
            "aws_vpc.c2m_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "c2m_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:174228772591:vpc/vpc-00a1af55f0a8a27ac",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.230.0.0/25",
            "default_network_acl_id": "acl-0e19c36a210b43c2c",
            "default_route_table_id": "rtb-04be6e3701d22a598",
            "default_security_group_id": "sg-0f4391f1932663491",
            "dhcp_options_id": "dopt-001cb623c7c5761b7",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-00a1af55f0a8a27ac",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04be6e3701d22a598",
            "owner_id": "174228772591",
            "tags": {
              "Name": "my-c2m-vpc"
            },
            "tags_all": {
              "Name": "my-c2m-vpc"
            }
          }
        }
      ]
    }
  ]
}